# UGRMPBase

./: .gitignore  README.md  Welcome.md  changelog.md
.github/: CODEOWNERS
CodeProjects/Datasets/: princeton_6locs.dts  princeton_test.dts  princeton_training.dts
CodeProjects/Fraud0/: ArrayLocation.cpp  ArrayLocation.h  Location.cpp  TestReport.HowToTestUnitTests.md  TestReport.md  VectorLocation.h  fraud0_test00.test  fraud0_test02.test  fraud0_test03.test  fraud0_test06.test  main.cpp
CodeProjects/Fraud1/: CMakeLists.txt
CodeProjects/Fraud1/doc/: documentation.doxy
CodeProjects/Fraud1/include/: Clustering.h  Location.h  VectorInt.h  VectorLocation.h
CodeProjects/Fraud1/scripts/: runUpdate.sh  settingsIDE.sh
CodeProjects/Fraud1/src/: Clustering.cpp  main.cpp
CodeProjects/Fraud1/tests/: TestReport.md  fraud1_test01.test  fraud1_test04.test  fraud1_test05.test  fraud1_test06.test
CodeProjects/Fraud3/: CMakeLists.txt
CodeProjects/Fraud4/: CMakeLists.txt
CodeProjects/Scripts/: doConfig.sh  runTest.sh
CodeProjects/Seminar4/: ejemplo1-ok.cpp  ejemplo1.cpp  ejemplo2.cpp  ejemplo3.cpp  ejemplo4.cpp  ejemplo5.cpp  ejemplo6.cpp  usoMemoriaLiberada.cpp
CodeProjects/miFraud0/: CMakeLists.txt
CodeProjects/miFraud1/: CMakeLists.txt
CodeProjects/miFraud2/: CMakeLists.txt
NetBeansProjects/Boston0/: Coordinates.cpp  Coordinates.h  Crime.cpp  Crime.h  DateTime.cpp  TestReport.HowToTestUnitTests.md  TestReport.md  crimes2_few_records.test  crimes6_easy.test  crimes6_normalize.test  crimes6_outsides_coordinates.test  crimes6_time_impossible.test  input00.b0in  (+13 more)
(+813 files in other folders)
